build/log/idf_py_stdout_output_712337
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/liuquan/project/esp32/freertos_template/build/bootloader/esp-idf/esptool_py && /home/liuquan/.espressif/python_env/idf5.4_py3.8_env/bin/python /esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/liuquan/project/esp32/freertos_template/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/freertos_template.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/freertos_template.c.obj 
/home/liuquan/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DUNITY_INCLUDE_CONFIG_H -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I/esp/esp-idf/components/newlib/platform_include -I/esp/esp-idf/components/freertos/config/include -I/esp/esp-idf/components/freertos/config/include/freertos -I/esp/esp-idf/components/freertos/config/xtensa/include -I/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/esp/esp-idf/components/freertos/esp_additions/include -I/esp/esp-idf/components/esp_hw_support/include -I/esp/esp-idf/components/esp_hw_support/include/soc -I/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/esp/esp-idf/components/esp_hw_support/dma/include -I/esp/esp-idf/components/esp_hw_support/ldo/include -I/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/esp/esp-idf/components/heap/include -I/esp/esp-idf/components/heap/tlsf -I/esp/esp-idf/components/log/include -I/esp/esp-idf/components/soc/include -I/esp/esp-idf/components/soc/esp32 -I/esp/esp-idf/components/soc/esp32/include -I/esp/esp-idf/components/soc/esp32/register -I/esp/esp-idf/components/hal/platform_port/include -I/esp/esp-idf/components/hal/esp32/include -I/esp/esp-idf/components/hal/include -I/esp/esp-idf/components/esp_rom/include -I/esp/esp-idf/components/esp_rom/esp32/include -I/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/esp/esp-idf/components/esp_rom/esp32 -I/esp/esp-idf/components/esp_common/include -I/esp/esp-idf/components/esp_system/include -I/esp/esp-idf/components/esp_system/port/soc -I/esp/esp-idf/components/esp_system/port/include/private -I/esp/esp-idf/components/xtensa/esp32/include -I/esp/esp-idf/components/xtensa/include -I/esp/esp-idf/components/xtensa/deprecated_include -I/esp/esp-idf/components/lwip/include -I/esp/esp-idf/components/lwip/include/apps -I/esp/esp-idf/components/lwip/include/apps/sntp -I/esp/esp-idf/components/lwip/lwip/src/include -I/esp/esp-idf/components/lwip/port/include -I/esp/esp-idf/components/lwip/port/freertos/include -I/esp/esp-idf/components/lwip/port/esp32xx/include -I/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/esp/esp-idf/components/esp_driver_gpio/include -I/esp/esp-idf/components/esp_pm/include -I/esp/esp-idf/components/mbedtls/port/include -I/esp/esp-idf/components/mbedtls/mbedtls/include -I/esp/esp-idf/components/mbedtls/mbedtls/library -I/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/esp/esp-idf/components/esp_app_format/include -I/esp/esp-idf/components/esp_bootloader_format/include -I/esp/esp-idf/components/app_update/include -I/esp/esp-idf/components/bootloader_support/include -I/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/esp/esp-idf/components/esp_partition/include -I/esp/esp-idf/components/efuse/include -I/esp/esp-idf/components/efuse/esp32/include -I/esp/esp-idf/components/esp_mm/include -I/esp/esp-idf/components/spi_flash/include -I/esp/esp-idf/components/esp_security/include -I/esp/esp-idf/components/pthread/include -I/esp/esp-idf/components/esp_timer/include -I/esp/esp-idf/components/esp_driver_gptimer/include -I/esp/esp-idf/components/esp_ringbuf/include -I/esp/esp-idf/components/esp_driver_uart/include -I/esp/esp-idf/components/vfs/include -I/esp/esp-idf/components/app_trace/include -I/esp/esp-idf/components/esp_event/include -I/esp/esp-idf/components/nvs_flash/include -I/esp/esp-idf/components/esp_driver_pcnt/include -I/esp/esp-idf/components/esp_driver_spi/include -I/esp/esp-idf/components/esp_driver_mcpwm/include -I/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/esp/esp-idf/components/esp_driver_i2s/include -I/esp/esp-idf/components/sdmmc/include -I/esp/esp-idf/components/esp_driver_sdmmc/include -I/esp/esp-idf/components/esp_driver_sdspi/include -I/esp/esp-idf/components/esp_driver_sdio/include -I/esp/esp-idf/components/esp_driver_dac/include -I/esp/esp-idf/components/esp_driver_rmt/include -I/esp/esp-idf/components/esp_driver_tsens/include -I/esp/esp-idf/components/esp_driver_sdm/include -I/esp/esp-idf/components/esp_driver_i2c/include -I/esp/esp-idf/components/esp_driver_ledc/include -I/esp/esp-idf/components/esp_driver_parlio/include -I/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/esp/esp-idf/components/driver/deprecated -I/esp/esp-idf/components/driver/i2c/include -I/esp/esp-idf/components/driver/touch_sensor/include -I/esp/esp-idf/components/driver/twai/include -I/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/esp/esp-idf/components/esp_phy/include -I/esp/esp-idf/components/esp_phy/esp32/include -I/esp/esp-idf/components/esp_vfs_console/include -I/esp/esp-idf/components/esp_netif/include -I/esp/esp-idf/components/wpa_supplicant/include -I/esp/esp-idf/components/wpa_supplicant/port/include -I/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/esp/esp-idf/components/esp_coex/include -I/esp/esp-idf/components/esp_wifi/include -I/esp/esp-idf/components/esp_wifi/include/local -I/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/esp/esp-idf/components/unity/include -I/esp/esp-idf/components/unity/unity/src -I/esp/esp-idf/components/cmock/CMock/src -I/esp/esp-idf/components/console -I/esp/esp-idf/components/http_parser -I/esp/esp-idf/components/esp-tls -I/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/esp/esp-idf/components/esp_adc/include -I/esp/esp-idf/components/esp_adc/interface -I/esp/esp-idf/components/esp_adc/esp32/include -I/esp/esp-idf/components/esp_adc/deprecated/include -I/esp/esp-idf/components/esp_driver_isp/include -I/esp/esp-idf/components/esp_driver_cam/include -I/esp/esp-idf/components/esp_driver_cam/interface -I/esp/esp-idf/components/esp_driver_jpeg/include -I/esp/esp-idf/components/esp_driver_ppa/include -I/esp/esp-idf/components/esp_eth/include -I/esp/esp-idf/components/esp_gdbstub/include -I/esp/esp-idf/components/esp_hid/include -I/esp/esp-idf/components/tcp_transport/include -I/esp/esp-idf/components/esp_http_client/include -I/esp/esp-idf/components/esp_http_server/include -I/esp/esp-idf/components/esp_https_ota/include -I/esp/esp-idf/components/esp_https_server/include -I/esp/esp-idf/components/esp_psram/include -I/esp/esp-idf/components/esp_lcd/include -I/esp/esp-idf/components/esp_lcd/interface -I/esp/esp-idf/components/protobuf-c/protobuf-c -I/esp/esp-idf/components/protocomm/include/common -I/esp/esp-idf/components/protocomm/include/security -I/esp/esp-idf/components/protocomm/include/transports -I/esp/esp-idf/components/protocomm/include/crypto/srp6a -I/esp/esp-idf/components/protocomm/proto-c -I/esp/esp-idf/components/esp_local_ctrl/include -I/esp/esp-idf/components/espcoredump/include -I/esp/esp-idf/components/espcoredump/include/port/xtensa -I/esp/esp-idf/components/wear_levelling/include -I/esp/esp-idf/components/fatfs/diskio -I/esp/esp-idf/components/fatfs/src -I/esp/esp-idf/components/fatfs/vfs -I/esp/esp-idf/components/idf_test/include -I/esp/esp-idf/components/idf_test/include/esp32 -I/esp/esp-idf/components/ieee802154/include -I/esp/esp-idf/components/json/cJSON -I/esp/esp-idf/components/mqtt/esp-mqtt/include -I/esp/esp-idf/components/nvs_sec_provider/include -I/esp/esp-idf/components/perfmon/include -I/esp/esp-idf/components/rt/include -I/esp/esp-idf/components/spiffs/include -I/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy   -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/liuquan/project/esp32/freertos_template=. -fmacro-prefix-map=/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/freertos_template.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/freertos_template.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/freertos_template.c.obj   -c ../main/freertos_template.c
../main/freertos_template.c: In function 'app_main':
../main/freertos_template.c:15:5: error: implicit declaration of function 'esp_task_wdt_delete' [-Wimplicit-function-declaration]
   15 |     esp_task_wdt_delete(NULL);
      |     ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
